fixed gap in scroll text container

--- a/src/Components/HomePage/HomePageComponents/InfoHeader/InfoHeader.css
+++ b/src/Components/HomePage/HomePageComponents/InfoHeader/InfoHeader.css
@@ -1,13 +1,11 @@
 #scroll-container {
   z-index: 1;
-  border-radius: 5px;
   overflow: hidden;
   position: absolute;
   bottom: 0px;
-  width: 100vw;
+  left: 0px;
+  width: 100vw !important;
   border-top: 2px solid green;
-  margin-left: auto;
-  margin-right: auto;
   background-color: black;
   height: 5vh;
   line-height: 5vh;
